.azure/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${IMAGE_NAME}
  labels:
    app: ${IMAGE_NAME}
    service: api
    stage: ${STAGE}
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ${IMAGE_NAME}
      service: api
      stage: ${STAGE}
  template:
    metadata:
      labels:
        app: ${IMAGE_NAME}
        service: api
        stage: ${STAGE}
    spec:
      containers:
      - name: ${IMAGE_NAME}
        image: ${FULL_IMAGE_NAME}
        startupProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
          failureThreshold: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 3
          periodSeconds: 5
        ports:
        - name: http
          containerPort: 1337
