.azure/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: ${APP_NAME}
    service: api
    stage: ${STAGE}
